--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,54 @@
+:root{
+	--color-main:#626262;
+	--color-link:#7D7D7D7D;
+	--color-card-link:#B4AD9E;
+	--color-hover:#03A9F4;
+	/* --font-family: "Playfair Display", sans-serif;
+  --second-family: "Ubuntu", sans-serif; */
+}
 body{
-	background-color: yellow;
+	font-family:  "Playfair Display", sans-serif;
+	font-weight: 400;
+	font-size: 14px;
+	color: var(--color-main) ;
+}
+.header-nav-list-item-link{
+	/* font-family:  "Playfair Display", sans-serif; */
+	/* font-weight: 400; */
+	/* font-size: 14px; */
+	color: var(--color-card-link) ;
+	text-decoration: none;
+}
+
+.header-nav-list-item-link:hover{
+	/* font-family:  "Playfair Display", sans-serif; */
+	/* font-weight: 400; */
+	/* font-size: 14px; */
+	color: var(--color-hover) ;
+}
+
+.gallery-link{
+	font-family: "Ubuntu", sans-serif;
+	font-weight: 300;
+	/* font-size:14px; */
+	color: var(--color-card-link);
+	text-decoration: none;
+}
+.gallery-list-title{
+	/* font-family:  "Playfair Display", sans-serif; */
+	font-weight: 400; 
+	font-size: 30px;
+	/* color: var(--color-main) ; */
+}
+.gallery-text{
+	/* font-family:  "Playfair Display", sans-serif; */
+	/* font-weight: 400; */
+	/* font-size: 14px; */
+	/* color: var(--color-main) ; */
+}
+.gallery-button{
+	/* font-family:  "Playfair Display", sans-serif; */
+	/* font-weight: 400; */
+	/* font-size: 14px; */
+	/* color: var(--color-main) ; */
 }
